--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,14 +31,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation project(path: ':checkupdate')
 
 
-    //小工具
-    implementation 'com.blankj:utilcode:1.28.6'
-    //异步
-    implementation 'io.reactivex:rxandroid:1.1.0'
-    implementation 'io.reactivex:rxjava:1.1.5'
-    //okhttp3
-    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
-    implementation 'org.conscrypt:conscrypt-android:2.2.1'
 }
